--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(geometry)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(geometry main.c)
+add_executable(geometry src/main.c src/fname.h src/fname.c src/area.h src/area.c src/perimeter.h src/perimeter.c src/crossing.h src/crossing.c)
