--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
-lenguage: C++
+  
+language: C++
+
 dist: xenial
 
 script:
-  - make      
+  - make
   - git ls-files src/ | xargs clang-format -i && git diff --exit-code
   - git ls-files test/ | xargs clang-format -i && git diff --exit-code
-  - ./bin/testing
+  - ./bin/test
