--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ script:
   - make
   - git ls-files src/ | xargs clang-format -i && git diff --exit-code
   - git ls-files test/ | xargs clang-format -i && git diff --exit-code
-  - ./bin/test
+  - ./bin/testing
